crates/lingui_macro/tests/snapshots/js_t__js_should_not_touch_not_related_tagget_tpls.snap
---
source: crates/lingui_macro/tests/js_t.rs
---
import { t } from "@lingui/core/macro";

b`Refresh inbox`;
b(i18n)`Refresh inbox`;

↓ ↓ ↓ ↓ ↓ ↓

b`Refresh inbox`;
b(i18n)`Refresh inbox`;
