crates/lingui_macro/tests/snapshots/js_t__js_should_produce_all_fields_without_strip_flag.snap
---
source: crates/lingui_macro/tests/js_t.rs
---
import { t } from '@lingui/core/macro'
const msg2 = t({
    message: `Hello ${name}`,
    id: 'msgId',
    comment: 'description for translators',
    context: 'My Context',
})

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
const msg2 = $_i18n._(/*i18n*/ {
    id: "msgId",
    message: "Hello {name}",
    values: {
        name: name
    },
    context: 'My Context',
    comment: 'description for translators'
});
