crates/lingui_macro/tests/snapshots/js_t__js_should_use_jsdoc_i18n_comment.snap
---
source: crates/lingui_macro/tests/js_t.rs
info:
  use_jsdoc_i18n_comment: true
---
import { t } from '@lingui/core/macro'
t`Hello World`

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
$_i18n._(/** i18n */ {
    id: "mY42CM",
    message: "Hello World"
});
