crates/lingui_macro/tests/snapshots/js_t__js_should_work_with_legacy_import.snap
---
source: crates/lingui_macro/tests/js_t.rs
---
 import { t } from "@lingui/macro";

t`Refresh inbox`;

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
$_i18n._(/*i18n*/ {
    id: "EsCV2T",
    message: "Refresh inbox"
});
