crates/lingui_macro/tests/snapshots/js_t__js_substitution_in_tpl_literal.snap
---
source: crates/lingui_macro/tests/js_t.rs
---
import { t } from "@lingui/core/macro";

t`Refresh inbox`
t`Refresh ${foo} inbox ${bar}`
t`Refresh ${foo.bar} inbox ${bar}`
t`Refresh ${expr()}`

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
$_i18n._(/*i18n*/ {
    id: "EsCV2T",
    message: "Refresh inbox"
});
$_i18n._(/*i18n*/ {
    id: "JPS-Xq",
    message: "Refresh {foo} inbox {bar}",
    values: {
        foo: foo,
        bar: bar
    }
});
$_i18n._(/*i18n*/ {
    id: "xplbye",
    message: "Refresh {0} inbox {bar}",
    values: {
        bar: bar,
        0: foo.bar
    }
});
$_i18n._(/*i18n*/ {
    id: "-NCjg_",
    message: "Refresh {0}",
    values: {
        0: expr()
    }
});
