crates/lingui_macro/tests/snapshots/js_t__js_t_fn_wrapped_in_call_expr.snap
---
source: crates/lingui_macro/tests/js_t.rs
---
import { t } from '@lingui/core/macro'
const msg = message.error(t({message: "dasd"}))

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
const msg = message.error($_i18n._(/*i18n*/ {
    id: "9ZMZjU",
    message: "dasd"
}));
